After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 603476 - gioenums.h:62: error: comma at end of enumerator list
gioenums.h:62: error: comma at end of enumerator list
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.23.x
Other All
: Normal major
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2009-12-01 13:16 UTC by Jeroen Nijhof
Modified: 2009-12-01 18:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to remove commas (757 bytes, patch)
2009-12-01 13:17 UTC, Jeroen Nijhof
committed Details | Review

Description Jeroen Nijhof 2009-12-01 13:16:34 UTC
After 0d86b25f91aeff168474280f4f5e03df779afc6d , trying to compile mozilla (C++ code) results in

  gioenums.h:62: error: comma at end of enumerator list

Apparently C++ doesn't like that. Trivial patch attached.
Comment 1 Jeroen Nijhof 2009-12-01 13:17:30 UTC
Created attachment 148823 [details] [review]
patch to remove commas
Comment 2 Javier Jardón (IRC: jjardon) 2009-12-01 18:48:59 UTC
Comment on attachment 148823 [details] [review]
patch to remove commas

commit 3d8035f799f632f196d914fde02dc052b7944581
Comment 3 Javier Jardón (IRC: jjardon) 2009-12-01 18:50:05 UTC
Thank you Jeroen,

This problem has been fixed in the development version. The fix will be available in the next major software release.