[gio] Remove some commas at end of enumerator list

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=603476